--- a/Vendas.dproj
+++ b/Vendas.dproj
@@ -149,8 +149,8 @@
             <Form>frmRelCadClienteFicha</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="relatorio\uRelVendaPorData.pas">
-            <Form>frmRelVendaPorData</Form>
+        <DCCReference Include="relatorio\uRelProVenda.pas">
+            <Form>frmRelProVenda</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="relatorio\uRelCadCliente.pas">
@@ -173,6 +173,21 @@
             <Form>frmRelProdutoCategoria</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="relatorio\uRelVendaPorData.pas">
+            <Form>frmRelVendaPorData</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="heranca\uFuncaoCriptografia.pas"/>
+        <DCCReference Include="cadastro\uCadUsuario.pas">
+            <Form>frmCadUsuario</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="classes\cCadUsuario.pas"/>
+        <DCCReference Include="login\uLogin.pas">
+            <Form>frmLogin</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="terceiros\Enter.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
